--- a/css/presStyle.css
+++ b/css/presStyle.css
@@ -1,6 +1,6 @@
 body
 {
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Times New Roman', Times, serif !important;
 }
 
 h1.title 
