--- a/css/presStyle.css
+++ b/css/presStyle.css
@@ -1,19 +1,85 @@
-h1.title 
+.pageRef
 {
-  font-size: 180px;
-  color:darkred;
-  line-height: 90px;
-  text-align: left;
-  font-family: 'Times New Roman', Times, serif !important;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+h2
+{
+  color:#18453b !important;
+  text-align: center;
+ /* font-family: 'Times New Roman', Times, serif !important;*/
+}
+h1.title
+{
+  font-size: 70px;
+  color:#18453b !important;
+  line-height: 70px;
+  text-align: center;
+  font-family: Helvetica !important;
 }
 .subtitle
 {
-  font-size: 90px;
-  text-align: left;
+  font-size: 45px;
+  line-height: 50px !important;
+  text-align: center;
+
 }
-h2.author 
+.quarto-title-affiliation::first-line
 {
+  /* in case you want the first line of affiliation to look different from the rest */
+}
+.quarto-title-affiliation
+{  
+  margin: 0 !important;
+  /* being used to style the GitHub link */
+  text-align: left;
+  font-size: 40px !important;
+}
+.quarto-title-author
+{
+  padding-left: 0 !important;
+}
+.quarto-title-authors
+{
+  margin-top: 20%;
   font-weight: normal;
-  line-height: 90px;
-  color: aqua;
+  font-size: 40px;
+  justify-content: left !important;
+  text-align: left;
+ /* font-family: 'Times New Roman', Times, serif !important;*/
+}
+.quarto-title-author::first-line
+{
+  /* in case you want the name to look different than the email */
+}
+.date
+{
+  margin: 0 !important;
+  text-align: left;
+  font-size: 40px;
+ /* font-family: 'Times New Roman', Times, serif !important;*/
+}
+.backgrounds>.quarto-title-block
+{
+  background-image: url("https://qfcatmsu.github.io/Images/dark-big.png");
+  background-repeat: no-repeat;
+  background-position: 97% 97%;
+  background-size: 40%;
+}
+div.slide-number
+{
+  width: 100%;
+  text-align: center;
+}
+ul, ol, li
+{
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+}
+
+ul, ul ul, ul ul ul, ul ul ul ul
+{
+  list-style-type: disc !important;
 }
