--- a/css/presStyle.css
+++ b/css/presStyle.css
@@ -11,7 +11,7 @@
 }
 h2
 {
- /* font-family: 'Times New Roman', Times, serif !important;*/
+  font-family: 'Times New Roman', Times, serif !important;
 }
 h1.title
 {
