--- a/css/presStyle.css
+++ b/css/presStyle.css
@@ -1,6 +1,17 @@
-.footer
+.footerRight
 {
-  text-align: right !important;
+  position: absolute;
+  right: 10px;
+  bottom: 60px;
+  font-size: 20px;
+}
+
+.footerLeft
+{
+  position: absolute;
+  left: 10px;
+  bottom: 60px;
+  font-size: 20px;
 }
 
 .centering
